# oud2-rs

./: Cargo.toml  README.md
.devcontainer/: devcontainer.json
.github/workflows/: lint_test.yml
src/: de.rs  error.rs  lib.rs  ser.rs
tests/: de.rs  ser.rs
